--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.typekit.net/rim3dvc.css">
     <title>Idea Start 2.0</title>
 </head>
 <body>
-    <h1>Hola, mundo</h1>
+    <h1 style="font-family: brandon-grotesque;">Hola, mundo</h1>
 </body>
 </html>
