--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,28 @@
     <link rel="stylesheet" href="https://use.typekit.net/rim3dvc.css">
     <title>Idea Start 2.0</title>
 </head>
+
 <body>
     <h1 style="font-family: brandon-grotesque;">Hola, mundo</h1>
+
+    <header>
+        <a href="https://iniciativaidea.org/" target="_blank">
+            <picture>
+                <!-- Desktop -->
+                <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea">
+                <!-- Mobile  -->
+                <img src="img/logo.png" alt="logo-idea">
+            </picture>
+        </a>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
