--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/rim3dvc.css">
+    <script src="js/main.js"></script>
     <title>Idea Start 2.0</title>
 </head>
 
@@ -21,10 +22,48 @@
                 <img src="img/logo.png" alt="logo-idea">
             </picture>
         </a>
+        <a href="https://www.impaqto.net/" target="_blank">
+            <picture>
+                <!-- Desktop
+                <source media="(min-width:1200px)" srcset="img/impaqto@2x.png" alt="logo-impaqto"> -->
+                <!-- Mobile  -->
+                <img src="img/impaqto.png" alt="logo-impaqto">
+            </picture>
+        </a>
     </header>
 
     <main>
+        <section class="top-main">
+            <h3>¿TIENES UNA STARTUP QUE BUSCA GENERAR IMPACTO SOBRE LOS DESAFÍOS DE SALUD
+                Y DERECHOS REPRODUCTIVOS EN AMÉRICA LATINA Y EL CARIBE?</h3>
+            <h6>¡Puedes ser una de las startups #HackersParaElBien!</h6>
+        </section>
+        <section class="idea-2.0">
+            <h1>
+                < Idea Start 2.0 />
+            </h1>
+        </section>
+        <section class="days-counter">
+            <span id="countdown" class="timer" style="display: none;"></span>
+        </section>
 
+        <section>
+            <a href="https://iniciativaidea.org/form-idea-start/#formulario-inscripcion-idea">¡POSTULA AHORA!</a>
+            <picture>
+                <!-- Desktop -->
+                <source media="(min-width:1200px)" srcset="img/Story_Start_Countdown@2x.png"
+                    alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
+                <!-- Mobile  -->
+                <img src="img/Story_Start_Countdown.png"
+                    alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
+            </picture>
+            <p>A diario, <span> millones de personas en América Latina ven obstaculizada su salud y derechos reproductivos</span> por
+                barreras socioculturales e institucionales, lo cual provoca consecuencias muy negativas para ellas, sus
+                familias y sus países. En <span> IDEA Start </span> queremos impulsar a las startups que buscan generar impacto sobre
+                los desafíos de salud y derechos reproductivos en América Latina. ¿Tu startup busca hackear la realidad
+                a favor de que más personas tengan un correcto acceso a salud y al cumplimiento de sus derechos
+                reproductivos? Tu momento ha llegado, <span> ¡súmate al reto y postula tu startup!</span></p>
+        </section>
     </main>
 
     <footer>
