--- a/index.html
+++ b/index.html
@@ -57,12 +57,33 @@
                 <img src="img/Story_Start_Countdown.png"
                     alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
             </picture>
-            <p>A diario, <span> millones de personas en América Latina ven obstaculizada su salud y derechos reproductivos</span> por
+            <p>A diario, <span> millones de personas en América Latina ven obstaculizada su salud y derechos
+                    reproductivos</span> por
                 barreras socioculturales e institucionales, lo cual provoca consecuencias muy negativas para ellas, sus
-                familias y sus países. En <span> IDEA Start </span> queremos impulsar a las startups que buscan generar impacto sobre
+                familias y sus países. En <span> IDEA Start </span> queremos impulsar a las startups que buscan generar
+                impacto sobre
                 los desafíos de salud y derechos reproductivos en América Latina. ¿Tu startup busca hackear la realidad
                 a favor de que más personas tengan un correcto acceso a salud y al cumplimiento de sus derechos
                 reproductivos? Tu momento ha llegado, <span> ¡súmate al reto y postula tu startup!</span></p>
+        </section>
+
+        <section class="desafios">
+            <h3>¿CUÁLES SON ALGUNOS DESAFÍOS DE NUESTRA REGIÓN EN MATERIA DE SALUD Y DERECHOS REPRODUCTIVOS?</h3>
+            <ul class="desafios-ul">
+                <li class="desafios-li">América Latina es la única región en el mundo donde aumentan el número de
+                    embarazos en niñas menores de 15 años, y cada año más de 2 millones de adolescentes entre 15 y 18
+                    años se embarazan, impactando su trayectoria educativa y oportunidades laborales.</li>
+                <li class="desafios-li">Aunque la interrupción del embarazo es un procedimiento médicamente sencillo y
+                    seguro, 760.000 mujeres son tratadas anualmente por complicaciones derivadas de la necesidad de
+                    recurrir al aborto inseguro.</li>
+                <li class="desafios-li">Más del 97% de las mujeres en edad reproductiva viven en países donde la
+                    interrupción del embarazo está altamente restringida por la ley y los patrones socioculturales.</li>
+                <li class="desafios-li">Más de 1 millón de niñas y adolescentes han sufrido violencia sexual.</li>
+                <li class="desafios-li">El 65% de las mujeres en edad reproductiva desean evitar un embarazo y no pueden
+                    hacerlo.</li>
+                <li class="desafios-li">24 millones de mujeres tienen una necesidad insatisfecha de métodos
+                    anticonceptivos modernos. </li>
+            </ul>
         </section>
     </main>
 
