avance contenido todo

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <span id="countdown" class="timer" style="display: none;"></span>
         </section>
 
-        <section>
-            <a href="https://iniciativaidea.org/form-idea-start/#formulario-inscripcion-idea">¡POSTULA AHORA!</a>
+        <section class="postulate">
+            <a href="https://iniciativaidea.org/form-idea-start/#formulario-inscripcion-idea" class="postulate-ahora">¡POSTULA AHORA!</a>
             <picture>
                 <!-- Desktop -->
                 <source media="(min-width:1200px)" srcset="img/Story_Start_Countdown@2x.png"
@@ -85,10 +85,163 @@
                     anticonceptivos modernos. </li>
             </ul>
         </section>
+
+        <section class="beneficios">
+            <h2>¡CONOCE LOS BENEFICIOS A LOS QUE TU STARTUP PODRÍA ACCEDER!</h2>
+            <article class="tarjetas">
+                <figure class="tarjeta">
+                    <picture>
+                        <!-- Desktop -->
+                        <source media="(min-width:1200px)" srcset="img/idea@2x.png"
+                            alt="dibujo de una bombita de luz, emulando una idea">
+                        <!-- Mobile  -->
+                        <img src="img/idea.png" alt="dibujo de una bombita de luz, emulando una idea">
+                    </picture>
+                    <figcaption>Mentorías a cargo de personas expertas en innovación social y emprendimiento.
+                    </figcaption>
+                </figure>
+                <figure class="tarjeta">
+                    <picture>
+                        <!-- Desktop -->
+                        <source media="(min-width:1200px)" srcset="img/lapiz-regla@2x.png"
+                            alt="Dibujo de un lápiz sobre una regla">
+                        <!-- Mobile  -->
+                        <img src="img/lapiz-regla.png" alt="Dibujo de un lápiz sobre una regla">
+                    </picture>
+                    <figcaption>Acceso a herramientas para robustecer tu modelo de negocio de triple impacto y
+                        prepararlo
+                        para su expansión, crecimiento y recibo de inversión.</figcaption>
+                </figure>
+                <figure class="tarjeta">
+                    <picture>
+                        <!-- Desktop -->
+                        <source media="(min-width:1200px)" srcset="img/ojo@2x.png" alt="dibujo de un ojo">
+                        <!-- Mobile  -->
+                        <img src="img/ojo.png" alt="dibujo de un ojo">
+                    </picture>
+                    <figcaption>Visibilidad para dar a conocer a tu startup ante potenciales clientes e inversores.
+                    </figcaption>
+                </figure>
+                <figure class="tarjeta">
+                    <picture>
+                        <!-- Desktop -->
+                        <source media="(min-width:1200px)" srcset="img/circulo-personas@2x.png"
+                            alt="Dibujo de iconos que representan personas interconectadas entre si por flechas">
+                        <!-- Mobile  -->
+                        <img src="img/circulo-personas.png"
+                            alt="Dibujo de iconos que representan personas interconectadas entre si por flechas">
+                    </picture>
+                    <figcaption>Desarrollo de tu red de contactos con otras empresas y organizaciones de la región para
+                        potenciar tu impacto.</figcaption>
+                </figure>
+                <figure class="tarjeta">
+                    <picture>
+                        <!-- Desktop -->
+                        <source media="(min-width:1200px)" srcset="img/estrella-mas@2x.png"
+                            alt="Dibujo de una estrella con el simbolo más">
+                        <!-- Mobile  -->
+                        <img src="img/estrella-mas.png" alt="Dibujo de una estrella con el simbolo más">
+                    </picture>
+                    <figcaption>Formación especializada en salud y derechos reproductivos, un mercado en expansión.
+                    </figcaption>
+                </figure>
+                <figure class="tarjeta">
+                    <picture>
+                        <!-- Desktop -->
+                        <source media="(min-width:1200px)" srcset="img/plantita@2x.png"
+                            alt="dibujo de una planta creciendo de la tierra.">
+                        <!-- Mobile  -->
+                        <img src="img/plantita.png" alt="dibujo de una planta creciendo de la tierra.">
+                    </picture>
+                    <figcaption>La posibilidad de acceder a capital semilla.</figcaption>
+                </figure>
+            </article>
+        </section>
+
+        <section class="al-finalizar">
+            <p>Al finalizar el reto de innovación, se llevará a cabo un Demo-day en el cual los participantes
+                presentarán su pitch; se seleccionará a los mejores en base al pitch y a su performance en el reto para
+                participar de la siguiente etapa de IDEA Start 2.0 que consiste en alguno de los siguientes programas:
+            </p>
+            <article class="tarjetas-numeros">
+                <div>
+                    <span class="tarjeta-numero">1</span>
+                    <p>Aceleración de sus modelos de negocio, o</p>
+                </div>
+                <div>
+                    <span class="tarjeta-numero">2</span>
+                    <p>Prototipado de soluciones*</p>
+                </div>
+            </article>
+            <p>Al término de los programas se seleccionará a dos startups ganadoras (una de cada programa) para obtener
+                el capital semilla otorgado por IDEA Start 2.0 destinado al escalamiento de los proyectos o productos
+                acelerados y prototipados, además de una beca para asistir al Foro IDEA 2023.</p>
+            <p class="apartado-aclaración">*La selección de participación en un programa u otro dependerá del modelo de
+                negocios y el tipo de
+                solución de cada startup *Para mayor información sobre el proceso, beneficios y términos y condiciones,
+                consulta las bases.</p>
+            <p>Conoce los requisitos para postular descargando los Términos y Condiciones <a href=""
+                    class="terminos-condiciones">aquí</a></p>
+        </section>
+
+        <section class="funcionamiento-reto">
+            <h2>¿CÓMO FUNCIONA EL RETO IDEA START 2.0?</h2>
+            <article class="funcionamiento-camino">
+                <div>
+                    <span>Postulación</span>
+                    <p>23 de octubre al 20 de noviembre del 2022</p>
+                </div>
+                <div>
+                    <span>Selección</span>
+                    <p>21 al 27 de noviembre del 2022</p>
+                </div>
+                <div>
+                    <span>Reto de innovación</span>
+                    <p>28 de noviembre al 2 de diciembre del 2022</p>
+                </div>
+                <div>
+                    <span>Programa de prototipado</span>
+                    <p>Enero 2023 (dura 1 semana) </p>
+                </div>
+                <div>
+                    <span>Programa de Aceleración</span>
+                    <p>De enero a marzo 2023</p>
+                </div>
+            </article>
+            <picture>
+                <!-- Desktop -->
+                <source media="(min-width:1200px)" srcset="img/mapamundi@2x.png"
+                    alt="Mapa de centro america y latinoamerica en blanco, sobre un fondo azul. A los costados hay diferentes dibujos, simbolizando mamas, vagina, pastillas, menstruación y un pañuelo de la lucha por el aborto.">
+                <!-- Mobile  -->
+                <img src="img/mapamundi.png"
+                    alt="Mapa de centro america y latinoamerica en blanco, sobre un fondo azul. A los costados hay diferentes dibujos, simbolizando mamas, vagina, pastillas, menstruación y un pañuelo de la lucha por el aborto.">
+            </picture>
+        </section>
+        <section class="tienes-una-startup">
+            <p class="tienes-destacado">¿Tienes una startup que desea generar impacto en salud y derechos reproductivos en América Latina?</p>
+            <p>Conviértete en una de las startups #HackersParaElBien.</p>
+            <a href="https://iniciativaidea.org/form-idea-start/#formulario-inscripcion-idea" class="postulate-ahora">¡POSTULA AHORA!</a>
+        </section>
     </main>
 
     <footer>
-
+        <a href="https://iniciativaidea.org/" target="_blank">
+            <picture>
+                <!-- Desktop -->
+                <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea">
+                <!-- Mobile  -->
+                <img src="img/logo.png" alt="logo-idea">
+            </picture>
+        </a>
+        <a href="https://www.impaqto.net/" target="_blank">
+            <picture>
+                <!-- Desktop
+                <source media="(min-width:1200px)" srcset="img/impaqto@2x.png" alt="logo-impaqto"> -->
+                <!-- Mobile  -->
+                <img src="img/impaqto.png" alt="logo-impaqto">
+            </picture>
+        </a>
+        <p>Copyright © 2022 Iniciativa IDEA <br> All Rights Reserved.</p>
     </footer>
 </body>
 
