header && main top mobile style

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="https://use.typekit.net/rim3dvc.css">
     <script src="js/main.js"></script>
     <title>Idea Start 2.0</title>
+    <link rel="stylesheet" href="style.min.css">
 </head>
 
 <body>
-    <h1 style="font-family: brandon-grotesque;">Hola, mundo</h1>
-
     <header>
         <a href="https://iniciativaidea.org/" target="_blank">
             <picture>
@@ -27,7 +26,7 @@
                 <!-- Desktop
                 <source media="(min-width:1200px)" srcset="img/impaqto@2x.png" alt="logo-impaqto"> -->
                 <!-- Mobile  -->
-                <img src="img/impaqto.png" alt="logo-impaqto">
+                <img src="img/impaqto.png" alt="logo-impaqto" class="logo-impaqto">
             </picture>
         </a>
     </header>
@@ -210,7 +209,7 @@
             </article>
             <picture>
                 <!-- Desktop -->
-                <source media="(min-width:1200px)" srcset="img/mapamundi@2x.png"
+                <source media="(min-width:1200px)" srcset="img/mapamundi1@2x.png"
                     alt="Mapa de centro america y latinoamerica en blanco, sobre un fondo azul. A los costados hay diferentes dibujos, simbolizando mamas, vagina, pastillas, menstruación y un pañuelo de la lucha por el aborto.">
                 <!-- Mobile  -->
                 <img src="img/mapamundi.png"
@@ -238,7 +237,7 @@
                 <!-- Desktop
                 <source media="(min-width:1200px)" srcset="img/impaqto@2x.png" alt="logo-impaqto"> -->
                 <!-- Mobile  -->
-                <img src="img/impaqto.png" alt="logo-impaqto">
+                <img src="img/impaqto.png" alt="logo-impaqto" class="logo-impaqto">
             </picture>
         </a>
         <p>Copyright © 2022 Iniciativa IDEA <br> All Rights Reserved.</p>
