main styles mobile

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
         <section class="top-main">
             <h3>¿TIENES UNA STARTUP QUE BUSCA GENERAR IMPACTO SOBRE LOS DESAFÍOS DE SALUD
                 Y DERECHOS REPRODUCTIVOS EN AMÉRICA LATINA Y EL CARIBE?</h3>
-            <h6>¡Puedes ser una de las startups #HackersParaElBien!</h6>
+            <h6>¡Puedes ser una de las startups <br> #HackersParaElBien!</h6>
         </section>
-        <section class="idea-2.0">
+
+        <section class="idea-dospuntocero">
             <h1>
-                < Idea Start 2.0 />
+                < Idea Start  <br> <span> 2.0  </span> />
             </h1>
         </section>
+
         <section class="days-counter">
             <span id="countdown" class="timer" style="display: none;"></span>
         </section>
