--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@
         <section class="desafios">
             <h3>¿CUÁLES SON ALGUNOS DESAFÍOS DE NUESTRA REGIÓN EN MATERIA DE SALUD Y DERECHOS REPRODUCTIVOS?</h3>
             <ul class="desafios-ul">
-                <li class="desafios-li"><span> América Latina es la única región en el mundo donde aumentan el número de
+                <li class="desafios-li embarazada"><span> América Latina es la única región en el mundo donde aumentan el número de
                     embarazos en niñas menores de 15 años,</span> y cada año más de 2 millones de adolescentes entre 15 y 18
                     años se embarazan, impactando su trayectoria educativa y oportunidades laborales.</li>
-                <li class="desafios-li">Aunque la interrupción del embarazo es un procedimiento médicamente sencillo y
+                <li class="desafios-li martillo">Aunque la interrupción del embarazo es un procedimiento médicamente sencillo y
                     seguro, <span>760.000 mujeres son tratadas anualmente por complicaciones derivadas de la necesidad de
                     recurrir al aborto inseguro.</span></li>
-                <li class="desafios-li">Más del 97% de las mujeres en edad reproductiva viven en países donde la
+                <li class="desafios-li utero">Más del 97% de las mujeres en edad reproductiva viven en países donde la
                 <span>interrupción del embarazo está altamente restringida por la ley y los patrones socioculturales.</span></li>
-                <li class="desafios-li"><span>Más de 1 millón de niñas y adolescentes</span> han sufrido violencia sexual.</li>
-                <li class="desafios-li">El 65% de las mujeres en edad reproductiva<span> desean evitar un embarazo y no pueden
+                <li class="desafios-li trompada"><span>Más de 1 millón de niñas y adolescentes</span> han sufrido violencia sexual.</li>
+                <li class="desafios-li test">El 65% de las mujeres en edad reproductiva<span> desean evitar un embarazo y no pueden
                     hacerlo.</span></li>
-                <li class="desafios-li"><span>24 millones de mujeres tienen una necesidad insatisfecha de métodos
+                <li class="desafios-li blister"><span>24 millones de mujeres tienen una necesidad insatisfecha de métodos
                     anticonceptivos modernos. </span></li>
             </ul>
         </section>
