tarjetas seccion beneficios en proceso

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h2>¡CONOCE LOS BENEFICIOS A LOS QUE TU STARTUP PODRÍA ACCEDER!</h2>
             <article class="tarjetas">
                 <figure class="tarjeta">
-                    <picture>
+                    <picture class="rosa">
                         <!-- Desktop -->
                         <source media="(min-width:1200px)" srcset="img/idea@2x.png"
                             alt="dibujo de una bombita de luz, emulando una idea">
@@ -104,7 +104,7 @@
                     </figcaption>
                 </figure>
                 <figure class="tarjeta">
-                    <picture>
+                    <picture class="amarillo">
                         <!-- Desktop -->
                         <source media="(min-width:1200px)" srcset="img/lapiz-regla@2x.png"
                             alt="Dibujo de un lápiz sobre una regla">
@@ -116,7 +116,7 @@
                         para su expansión, crecimiento y recibo de inversión.</figcaption>
                 </figure>
                 <figure class="tarjeta">
-                    <picture>
+                    <picture class="violeta">
                         <!-- Desktop -->
                         <source media="(min-width:1200px)" srcset="img/ojo@2x.png" alt="dibujo de un ojo">
                         <!-- Mobile  -->
@@ -126,7 +126,7 @@
                     </figcaption>
                 </figure>
                 <figure class="tarjeta">
-                    <picture>
+                    <picture class="rosa">
                         <!-- Desktop -->
                         <source media="(min-width:1200px)" srcset="img/circulo-personas@2x.png"
                             alt="Dibujo de iconos que representan personas interconectadas entre si por flechas">
@@ -138,7 +138,7 @@
                         potenciar tu impacto.</figcaption>
                 </figure>
                 <figure class="tarjeta">
-                    <picture>
+                    <picture class="amarillo">
                         <!-- Desktop -->
                         <source media="(min-width:1200px)" srcset="img/estrella-mas@2x.png"
                             alt="Dibujo de una estrella con el simbolo más">
@@ -149,7 +149,7 @@
                     </figcaption>
                 </figure>
                 <figure class="tarjeta">
-                    <picture>
+                    <picture class="violeta">
                         <!-- Desktop -->
                         <source media="(min-width:1200px)" srcset="img/plantita@2x.png"
                             alt="dibujo de una planta creciendo de la tierra.">
