tarjetas seccion al finalizar listas mobile

--- a/index.html
+++ b/index.html
@@ -162,19 +162,33 @@
         </section>
 
         <section class="al-finalizar">
-            <p>Al finalizar el reto de innovación, se llevará a cabo un Demo-day en el cual los participantes
+            <p class="al-finalizar-texto">Al finalizar el reto de innovación, se llevará a cabo un Demo-day en el cual los participantes
                 presentarán su pitch; se seleccionará a los mejores en base al pitch y a su performance en el reto para
                 participar de la siguiente etapa de IDEA Start 2.0 que consiste en alguno de los siguientes programas:
             </p>
             <article class="tarjetas-numeros">
-                <div>
-                    <span class="tarjeta-numero">1</span>
-                    <p>Aceleración de sus modelos de negocio, o</p>
-                </div>
-                <div>
-                    <span class="tarjeta-numero">2</span>
-                    <p>Prototipado de soluciones*</p>
-                </div>
+                <figure class="tarjeta">
+                    <picture class="rosa">
+                        <!-- Desktop -->
+                        <source media="(min-width:1200px)" srcset="img/uno@2x.png"
+                            alt="dibujo de una bombita de luz, emulando una idea">
+                        <!-- Mobile  -->
+                        <img src="img/uno.png" alt="dibujo de una bombita de luz, emulando una idea">
+                    </picture>
+                    <figcaption>Aceleración de sus modelos de negocio
+                    </figcaption>
+                </figure>
+                <figure class="tarjeta">
+                    <picture class="rosa">
+                        <!-- Desktop -->
+                        <source media="(min-width:1200px)" srcset="img/dos@2x.png"
+                            alt="dibujo de una bombita de luz, emulando una idea">
+                        <!-- Mobile  -->
+                        <img src="img/dos.png" alt="dibujo de una bombita de luz, emulando una idea">
+                    </picture>
+                    <figcaption>Prototipado de soluciones*
+                    </figcaption>
+                </figure>
             </article>
             <p>Al término de los programas se seleccionará a dos startups ganadoras (una de cada programa) para obtener
                 el capital semilla otorgado por IDEA Start 2.0 destinado al escalamiento de los proyectos o productos
