seccion al finalizar mobile terminada

--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
                     </figcaption>
                 </figure>
             </article>
-            <p>Al término de los programas se seleccionará a dos startups ganadoras (una de cada programa) para obtener
+            <p class="al-finalizar-texto">Al término de los programas se seleccionará a dos startups ganadoras (una de cada programa) para obtener
                 el capital semilla otorgado por IDEA Start 2.0 destinado al escalamiento de los proyectos o productos
                 acelerados y prototipados, además de una beca para asistir al Foro IDEA 2023.</p>
             <p class="apartado-aclaración">*La selección de participación en un programa u otro dependerá del modelo de
                 negocios y el tipo de
                 solución de cada startup *Para mayor información sobre el proceso, beneficios y términos y condiciones,
                 consulta las bases.</p>
-            <p>Conoce los requisitos para postular descargando los Términos y Condiciones <a href=""
+            <p class="al-finalizar-texto">Conoce los requisitos para postular descargando los Términos y Condiciones <a href=""
                     class="terminos-condiciones">aquí</a></p>
         </section>
 
