primer version mobile done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section class="idea-dospuntocero">
             <h1>
-                < Idea Start  <br> <span> 2.0  </span> />
+                < Idea Start <br> <span> 2.0 </span> />
             </h1>
         </section>
 
@@ -49,43 +49,56 @@
         </section>
 
         <section class="postulate">
-            <a href="https://iniciativaidea.org/form-idea-start/#formulario-inscripcion-idea" class="postulate-ahora">¡POSTULA AHORA!</a>
-           <article>
-            <picture>
-                <!-- Desktop -->
-                <source media="(min-width:1200px)" srcset="img/Story_Start_Countdown@2x.png"
-                    alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
-                <!-- Mobile  -->
-                <img src="img/Story_Start_Countdown.png"
-                    alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
-            </picture>
-            <p>A diario, <span> millones de personas en América Latina ven obstaculizada su salud y derechos
-                    reproductivos</span> por
-                barreras socioculturales e institucionales, lo cual provoca consecuencias muy negativas para ellas, sus
-                familias y sus países.  <br><br> En <span> IDEA Start </span> queremos impulsar a las startups que buscan generar
-                impacto sobre
-                los desafíos de salud y derechos reproductivos en América Latina. <br>¿Tu startup busca hackear la realidad
-                a favor de que más personas tengan un correcto acceso a salud y al cumplimiento de sus derechos
-                reproductivos? <br> Tu momento ha llegado, <span> ¡súmate al reto y postula tu startup!</span></p>
+            <a href="https://iniciativaidea.org/form-idea-start/#formulario-inscripcion-idea"
+                class="postulate-ahora">¡POSTULA AHORA!</a>
+            <article>
+                <picture>
+                    <!-- Desktop -->
+                    <source media="(min-width:1200px)" srcset="img/Story_Start_Countdown@2x.png"
+                        alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
+                    <!-- Mobile  -->
+                    <img src="img/Story_Start_Countdown.png"
+                        alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
+                </picture>
+                <p>A diario, <span> millones de personas en América Latina ven obstaculizada su salud y derechos
+                        reproductivos</span> por
+                    barreras socioculturales e institucionales, lo cual provoca consecuencias muy negativas para ellas,
+                    sus
+                    familias y sus países. <br><br> En <span> IDEA Start </span> queremos impulsar a las startups que
+                    buscan generar
+                    impacto sobre
+                    los desafíos de salud y derechos reproductivos en América Latina. <br>¿Tu startup busca hackear la
+                    realidad
+                    a favor de que más personas tengan un correcto acceso a salud y al cumplimiento de sus derechos
+                    reproductivos? <br> Tu momento ha llegado, <span> ¡súmate al reto y postula tu startup!</span></p>
             </article>
         </section>
 
         <section class="desafios">
             <h3>¿CUÁLES SON ALGUNOS DESAFÍOS DE NUESTRA REGIÓN EN MATERIA DE SALUD Y DERECHOS REPRODUCTIVOS?</h3>
             <ul class="desafios-ul">
-                <li class="desafios-li embarazada"><span> América Latina es la única región en el mundo donde aumentan el número de
-                    embarazos en niñas menores de 15 años,</span> y cada año más de 2 millones de adolescentes entre 15 y 18
+                <li class="desafios-li embarazada"><span> América Latina es la única región en el mundo donde aumentan
+                        el número de
+                        embarazos en niñas menores de 15 años,</span> y cada año más de 2 millones de adolescentes entre
+                    15 y 18
                     años se embarazan, impactando su trayectoria educativa y oportunidades laborales.</li>
-                <li class="desafios-li martillo">Aunque la interrupción del embarazo es un procedimiento médicamente sencillo y
-                    seguro, <span>760.000 mujeres son tratadas anualmente por complicaciones derivadas de la necesidad de
-                    recurrir al aborto inseguro.</span></li>
+                <li class="desafios-li martillo">Aunque la interrupción del embarazo es un procedimiento médicamente
+                    sencillo y
+                    seguro, <span>760.000 mujeres son tratadas anualmente por complicaciones derivadas de la necesidad
+                        de
+                        recurrir al aborto inseguro.</span></li>
                 <li class="desafios-li utero">Más del 97% de las mujeres en edad reproductiva viven en países donde la
-                <span>interrupción del embarazo está altamente restringida por la ley y los patrones socioculturales.</span></li>
-                <li class="desafios-li trompada"><span>Más de 1 millón de niñas y adolescentes</span> han sufrido violencia sexual.</li>
-                <li class="desafios-li test">El 65% de las mujeres en edad reproductiva<span> desean evitar un embarazo y no pueden
-                    hacerlo.</span></li>
-                <li class="desafios-li blister"><span>24 millones de mujeres tienen una necesidad insatisfecha de métodos
-                    anticonceptivos modernos. </span></li>
+                    <span>interrupción del embarazo está altamente restringida por la ley y los patrones
+                        socioculturales.</span>
+                </li>
+                <li class="desafios-li trompada"><span>Más de 1 millón de niñas y adolescentes</span> han sufrido
+                    violencia sexual.</li>
+                <li class="desafios-li test">El 65% de las mujeres en edad reproductiva<span> desean evitar un embarazo
+                        y no pueden
+                        hacerlo.</span></li>
+                <li class="desafios-li blister"><span>24 millones de mujeres tienen una necesidad insatisfecha de
+                        métodos
+                        anticonceptivos modernos. </span></li>
             </ul>
         </section>
 
@@ -162,7 +175,8 @@
         </section>
 
         <section class="al-finalizar">
-            <p class="al-finalizar-texto">Al finalizar el reto de innovación, se llevará a cabo un Demo-day en el cual los participantes
+            <p class="al-finalizar-texto">Al finalizar el reto de innovación, se llevará a cabo un Demo-day en el cual
+                los participantes
                 presentarán su pitch; se seleccionará a los mejores en base al pitch y a su performance en el reto para
                 participar de la siguiente etapa de IDEA Start 2.0 que consiste en alguno de los siguientes programas:
             </p>
@@ -190,15 +204,16 @@
                     </figcaption>
                 </figure>
             </article>
-            <p class="al-finalizar-texto">Al término de los programas se seleccionará a dos startups ganadoras (una de cada programa) para obtener
+            <p class="al-finalizar-texto">Al término de los programas se seleccionará a dos startups ganadoras (una de
+                cada programa) para obtener
                 el capital semilla otorgado por IDEA Start 2.0 destinado al escalamiento de los proyectos o productos
                 acelerados y prototipados, además de una beca para asistir al Foro IDEA 2023.</p>
             <p class="apartado-aclaración">*La selección de participación en un programa u otro dependerá del modelo de
                 negocios y el tipo de
                 solución de cada startup *Para mayor información sobre el proceso, beneficios y términos y condiciones,
                 consulta las bases.</p>
-            <p class="al-finalizar-texto">Conoce los requisitos para postular descargando los Términos y Condiciones <a href=""
-                    class="terminos-condiciones">aquí</a></p>
+            <p class="al-finalizar-texto">Conoce los requisitos para postular descargando los Términos y Condiciones <a
+                    href="" class="terminos-condiciones">aquí</a></p>
         </section>
 
         <section class="funcionamiento-reto">
@@ -233,33 +248,47 @@
                 <img src="img/mapamundi.png"
                     alt="Mapa de centro america y latinoamerica en blanco, sobre un fondo azul. A los costados hay diferentes dibujos, simbolizando mamas, vagina, pastillas, menstruación y un pañuelo de la lucha por el aborto.">
             </picture>
-            
+
         </section>
         <section class="tienes-una-startup">
-            <p class="tienes-destacado">¿Tienes una startup que desea generar impacto en salud y derechos reproductivos en América Latina?</p>
+            <p class="tienes-destacado">¿Tienes una startup que desea generar impacto en salud y derechos reproductivos
+                en América Latina?</p>
             <p>Conviértete en una de las startups #HackersParaElBien.</p>
-            <a href="https://iniciativaidea.org/form-idea-start/#formulario-inscripcion-idea" class="postulate-ahora">¡POSTULA AHORA!</a>
+            <a href="https://iniciativaidea.org/form-idea-start/#formulario-inscripcion-idea"
+                class="postulate-ahora">¡POSTULA AHORA!</a>
         </section>
     </main>
 
     <footer>
-        <a href="https://iniciativaidea.org/" target="_blank">
-            <picture>
-                <!-- Desktop -->
-                <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea">
-                <!-- Mobile  -->
-                <img src="img/logo.png" alt="logo-idea">
-            </picture>
-        </a>
-        <a href="https://www.impaqto.net/" target="_blank">
-            <picture>
-                <!-- Desktop
+        <section class="logos-footer">
+            <a href="https://iniciativaidea.org/" target="_blank">
+                <picture>
+                    <!-- Desktop -->
+                    <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea">
+                    <!-- Mobile  -->
+                    <img src="img/logo.png" alt="logo-idea">
+                </picture>
+            </a>
+            <a href="https://www.impaqto.net/" target="_blank">
+                <picture>
+                    <!-- Desktop
                 <source media="(min-width:1200px)" srcset="img/impaqto@2x.png" alt="logo-impaqto"> -->
-                <!-- Mobile  -->
-                <img src="img/impaqto.png" alt="logo-impaqto" class="logo-impaqto">
-            </picture>
-        </a>
-        <p>Copyright © 2022 Iniciativa IDEA <br> All Rights Reserved.</p>
+                    <!-- Mobile  -->
+                    <img src="img/impaqto.png" alt="logo-impaqto" class="logo-impaqto">
+                </picture>
+            </a>
+        </section>
+        <section class="redes-sociales-footer">
+            <ul>
+                <li style="display: none;"><a href="https://www.linkedin.com/company/69231220/admin/"><img src="" alt="link a linkedin"></a></li>
+                <li><a href="https://www.facebook.com/IniciativaIDEA/"><img src="img/facebook.svg" alt="link a facebook"></a></li>
+                <li><a href="https://twitter.com/IniciativaIDEA"><img src="img/twitter.svg" alt="link a twitter"></a></li>
+                <li><a href="https://www.instagram.com/iniciativaidea/"><img src="img/instagram.svg" alt="link a instagram"></a></li>
+            </ul>
+        </section>
+        <section class="copyright">
+            <p>Copyright © 2022 Iniciativa IDEA <br> All Rights Reserved.</p>
+        </section>
     </footer>
 </body>
 
