primer version mobile done3

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
 
         <section class="postulate">
-            <a href="https://iniciativaidea.org/form-idea-start/#formulario-inscripcion-idea"
+            <a href="https://iniciativaidea.org/idea-start/#formulario-inscripcion-idea"
                 class="postulate-ahora">¡POSTULA AHORA!</a>
             <article>
                 <picture>
@@ -254,7 +254,7 @@
             <p class="tienes-destacado">¿Tienes una startup que desea generar impacto en salud y derechos reproductivos
                 en América Latina?</p>
             <p>Conviértete en una de las startups #HackersParaElBien.</p>
-            <a href="https://iniciativaidea.org/form-idea-start/#formulario-inscripcion-idea"
+            <a href="https://iniciativaidea.org/idea-start/#formulario-inscripcion-idea"
                 class="postulate-ahora">¡POSTULA AHORA!</a>
         </section>
     </main>
