primer version tablet done

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <source media="(min-width:1200px)" srcset="img/Story_Start_Countdown@2x.png"
                         alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
                     <!-- Mobile  -->
-                    <img src="img/Story_Start_Countdown.png"
+                    <img src="img/Story_Start_Countdown@2x.png"
                         alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
                 </picture>
                 <p>A diario, <span> millones de personas en América Latina ven obstaculizada su salud y derechos
