--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="https://iniciativaidea.org/" target="_blank">
             <picture>
                 <!-- Desktop -->
-                <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea">
+                <!-- <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea"> -->
                 <!-- Mobile  -->
                 <img src="img/logo.png" alt="logo-idea">
             </picture>
@@ -264,7 +264,7 @@
             <a href="https://iniciativaidea.org/" target="_blank">
                 <picture>
                     <!-- Desktop -->
-                    <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea">
+                    <!-- <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea"> -->
                     <!-- Mobile  -->
                     <img src="img/logo.png" alt="logo-idea">
                 </picture>
