números pasados de img a texto

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
                     <source media="(min-width:1200px)" srcset="img/story-board-dsktop.png"
                         alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
                     <!-- Mobile  -->
-                    <img src="img/Story_Start_Countdown@2x.png"
+                    <!-- tablet -->
+                    <source media="(min-width:768)" srcset="img/Cuadros-Key-visual-1200px.png"
+                        alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
+                    <!-- Mobile  -->
+                    <img src="img/Cuadros-Key-visual-768px.png"
                         alt="Se ve un afiche de 4 cuadros, en el primero se ven dibujos de dialogo, en el segundo una claqueta de cine, en el tercero un lapiz escribiendo y en el cuarto unas antiparras de agua">
                 </picture>
                 <p>A diario, <span> millones de personas en América Latina ven obstaculizada su salud y derechos
@@ -185,28 +189,16 @@
                 participar de la siguiente etapa de IDEA Start 2.0 que consiste en alguno de los siguientes programas:
             </p>
             <article class="tarjetas-numeros">
-                <figure class="tarjeta">
-                    <picture class="rosa">
-                        <!-- Desktop -->
-                        <source media="(min-width:1200px)" srcset="img/uno@2x.png"
-                            alt="dibujo de una bombita de luz, emulando una idea">
-                        <!-- Mobile  -->
-                        <img src="img/uno.png" alt="dibujo de una bombita de luz, emulando una idea">
-                    </picture>
+                <div class="tarjeta">
+                   <span>1</span>
                     <figcaption>Aceleración de sus modelos de negocio
                     </figcaption>
-                </figure>
-                <figure class="tarjeta">
-                    <picture class="rosa">
-                        <!-- Desktop -->
-                        <source media="(min-width:1200px)" srcset="img/dos@2x.png"
-                            alt="dibujo de una bombita de luz, emulando una idea">
-                        <!-- Mobile  -->
-                        <img src="img/dos.png" alt="dibujo de una bombita de luz, emulando una idea">
-                    </picture>
+                </div>
+                <div class="tarjeta">
+                    <span class="dos">2</span>
                     <figcaption>Prototipado de soluciones*
                     </figcaption>
-                </figure>
+                </div>
             </article>
             <p class="al-finalizar-texto">Al término de los programas se seleccionará a dos startups ganadoras (una de
                 cada programa) para obtener
